
[workspace]
resolver = "2"

members = [
    "bart-firmware", "bart_core"
]

[workspace.package]
authors = ["Tyler Casselman <tylerc230@gmail.com>"]
version = "0.1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

