[package]
name = "bart-firmware"
edition = "2021"
rust-version = "1.71"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48.1", default-features = false }
anyhow      = "=1.0.75"
heapless = "0.8.0"
toml-cfg     = "=0.1.3"
embedded-svc = "=0.27.1"
smart-leds = "0.4.0"
smart-leds-trait = "0.3.0"
ws2812-spi = {git = "https://github.com/smart-leds-rs/ws2812-spi-rs", branch = "eh10"}
embedded-hal = "1.0.0"
bart_core = { path = "../bart_core" }

[build-dependencies]
embuild = "0.31.3"
toml-cfg     = "=0.1.3"

