[package]
name = "bart_core"
edition = "2021"
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
smart-leds = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", default-features = false }
anyhow      = "=1.0.75"
